--- a/exampleSite/config (1).toml
+++ b/exampleSite/config (1).toml
@@ -1,5 +1,6 @@
 baseURL = "https://dahi.icu/"
 languageCode = "zh-tw"
+defaultContentLanguage = "zh"
 title = "Dahi"
 theme = "kagome"
 paginate = 15
